# dechdev_rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/example/: ex_argon2.rs  ex_arrange_group.rs  ex_bcrypt.rs  ex_calculate_group.rs  ex_calculate_page.rs  ex_crypto.rs  ex_csv.rs  ex_csv_immut.rs  ex_csv_mut.rs  ex_date_time.rs  ex_discord.rs  ex_group.rs  ex_numeric.rs  ex_path_file.rs  ex_random.rs  ex_slice.rs  ex_string.rs  mod.rs
src/messager/: discord.rs
src/messenger/: discord.rs
src/utils/: argon2.rs  base64.rs  bcrypt.rs  coordinate.rs  crypto.rs  crypto_aes.rs  crypto_ase_gcm.rs  crypto_fix.rs  csv.rs  csv_mut.rs  group.rs  helper.rs  mod.rs  numeric.rs  path_file.rs  random.rs  slice.rs  slice_mut.rs  string.rs  util.rs
src/utils/csv/: csv_immut.rs  csv_mut.rs  mod.rs
src/utils/slice/: mod.rs  slice_immut.rs
tests/utils/util/string/: mod.rs  to_camel_case_test.rs  to_pascal_case_test.rs
