[package]
name = "dechdev_rs"
version = "0.1.5"
edition = "2024"
authors = ["Ruangdech  Kurunat"]
description = "A Rust library for DechDev, a decentralized development platform."
license = "MIT OR Apache-2.0"
repository = "https://github.com/THAI-DEV/dechdev_rs"

[dev-dependencies]
pretty_assertions = "1.0.0"

[[test]]
name = "test_1"
path = "tests/utils/util/string/to_pascal_case_test.rs"

[[test]]
name = "test_2"
path = "tests/utils/util/string/to_camel_case_test.rs"

[dependencies]
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json", "blocking"] }
bcrypt = "0.17.0"
aes-gcm = "0.10"
hex = "0.4"
base64 = "0.22"
