[package]
name = "dechdev_rs"
version = "0.1.40"
edition = "2024"
authors = ["Ruangdech  Kurunat"]
description = "A Rust library by DECHDEV."
license = "MIT OR Apache-2.0"
repository = "https://github.com/THAI-DEV/dechdev_rs"

[dev-dependencies]
pretty_assertions = "1.4.1"

[[test]]
name = "test_1"
path = "tests/utils/util/string/to_pascal_case_test.rs"

[[test]]
name = "test_2"
path = "tests/utils/util/string/to_camel_case_test.rs"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
bcrypt = "0.17.1"
csv = "1.4.0"
hex = "0.4.3"
password-hash = "0.5.0"
rand = "0.9.2"
rand_core = { version = "0.9.3", features = ["std"] }
regex = "1.12.2"
reqwest = { version = "0.12.25", features = ["json", "blocking"] }
